# KongMingQi

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  mingw-toolchain.cmake  编写说明.txt
.cache/clangd/index/: Board.cpp.BBCF464C4C97BC96.idx  Board.h.404E4BF8899ACCB6.idx  Game.cpp.CD840C57C7147191.idx  Game.h.B3A82D41A4F594E8.idx  GameGUI.cpp.0731D73717A1FA2A.idx  GameGUI.h.A43BBECF17BDFBAA.idx  main.cpp.EBE86797ACB9655F.idx
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
include/: Board.h  Game.h  GameGUI.h
src/: Board.cpp  CMakeCache.txt  Game.cpp  GameGUI.cpp  KongMingQi  Makefile  cmake_install.cmake  main.cpp
